# BaiQuant-public

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
configs/: live_20k_pullback.toml  live_50k_conservative.toml  tushare_sqlite.toml
data/: README.md
docs/: architecture.md  live_20k_strategy.md  public_strategy.md
examples/: baseline.toml  baseline_sqlite.toml
examples/data/: events.csv  fundamentals.csv  prices.csv  stocks.csv
src/baiquant/: __init__.py  backtest.py  cli.py  config.py  desk.py  live_ledger.py  live_readiness.py  pipeline.py  portfolio.py  scoring.py
src/baiquant/data/: __init__.py  baostock_provider.py  bundle.py  converters.py  csv_provider.py  efinance_provider.py  schema.py  sqlite_provider.py  symbols.py  tushare_provider.py
src/baiquant/factors/: __init__.py  events.py  fundamental.py  money_flow.py  registry.py  technical.py
src/baiquant/research/: __init__.py  factor_diagnostics.py  live20k_optimizer.py  multifactor.py  (+1 more)
tests/: test_backtest.py  test_baostock_ingest.py  test_cli.py  test_convert.py  test_csv_provider.py  test_desk.py  test_efinance_ingest.py  test_factor_research.py  test_fundamental_factors.py  test_live20k_optimizer.py  test_live20k_strategy.py  test_live_ledger.py  test_live_readiness.py  test_lot_portfolio.py  test_money_flow_factors.py  test_multifactor_research.py  test_multifactor_strategy.py  test_regime_router.py  test_selection.py  test_sqlite_provider.py  test_technical_factors.py  test_tushare_defaults.py  test_tushare_ingest.py  test_universe.py
(+5 files in other folders)
