[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baiquant"
version = "0.1.0"
description = "A-share multi-factor stock selection research framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
]

[project.optional-dependencies]
data = [
    "baostock>=0.9.1",
    "efinance>=0.5.8",
    "tushare>=1.4",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
baiquant = "baiquant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
